scroll bug solved by adding overflow:hidden to body

--- a/styles/style.css
+++ b/styles/style.css
@@ -75,7 +75,7 @@ body {
   min-height: 100%;
   padding: 0;
   margin: 0 auto;
-  overflow-x: hidden;
+  overflow: hidden;
 
   font-family: var(--main-font);
   font-weight: 400;
